ASUSFETest/src/objects/Student_Group__c.object
<CustomObject>
    <description>Student Group information from PeopleSoft</description>
    <fields>
        <fullName>SG_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Groups</relationshipLabel>
        <relationshipName>Student_Groups_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SG_Description__c</fullName>
        <label>Description</label>
        <picklist>
            <picklistValues>
                <fullName>All Arizona Academic Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI reqs alt Sun Devil Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI requires Sun Devil Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied Pathway Eligible Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern AZ College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONORS GD STND LOW DIV &lt; 2107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONORS GD STND LOW DIV &gt;= 2107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONORS GD STND UPP DIV &lt; 2107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONORS GD STND UPP DIV &gt;= 2107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONORS, PROV-LOWER DIVISION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONORS, PROV-UPPER DIVISION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huazhong Unv Sci&amp;Tech students (HUST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lake Havasu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLFTC ESP provisional admits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Achievement Semifinalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Hispanic Scholar Finalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Merit Semifinalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New College GAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Admissible recvd CC invite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional Admt - NR students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDS 2013 - 11 credit hour option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDS 2013 - 4 credit hour option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDS 2013 Exceptions (Veteran, Athlete, Tribal Scholar)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDS 2013 Overall group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sichun University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored International App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA Prospect-Signed Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Carey Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WUE Western Undergrad Exchange</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SG_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SG_PeopleSoft_Code__c</fullName>
        <label>PeopleSoft Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SG_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Student Group</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Student Group Label</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>